--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "submodules/chat"]
-	path = submodules/chat
+[submodule "chat"]
+	path = chat
 	url = https://github.com/hieu22pham/web.git
 
