Update line endings in .gitmodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = chat
 	url = https://github.com/hieu22pham/web.git
 
+[submodule "submodules/chat"]
+	path = submodules/chat
+	url = https://github.com/hieu22pham/web.git
