--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "chat"]
 	path = chat
 	url = https://github.com/hieu22pham/web.git
+[submodule "submodules/chat"]
+	path = submodules/chat
+	url = https://github.com/hieu22pham/web.git
