--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "firestore": "^1.1.6",
     "netlify": "^13.1.10",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.7.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^4.2.1",
     "styled-components": "^6.0.4",
+    "swiper": "^10.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
